[package]
name = "autodl-rss"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"

serde-xml-rs = "0.3.1"
serde_yaml = "0.8.11"
serde_json = "1.0.48"
serde = {version = "1.0.104", features= ["serde_derive"]}
qbittorrent = {git = "https://github.com/vanillabrooks/qbittorrent"}
tokio = {version=  "0.2.11", features=["full"]}
thiserror = "1.0.11"
http = "0.2.0"
