[package]
name = "autodl-rss"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"

serde_yaml = "0.9.14"
serde_json = "1.0.48"
serde = {version = "1.0.104", features= ["serde_derive"]}
qbittorrent = {git = "https://github.com/vanillabrooks/qbittorrent", rev="b1a0902c39e22260c02d69f53324fd612f551912"}
tokio = {version=  "1.21.2", features=["full"]}
thiserror = "1.0.11"
http = "0.2.0"

[dependencies.quick-xml]
version = "0.26.0"
features = ["serde", "serialize"]
